@@ -10,7 +10,7 @@ Gem::Specification.new do |s|
   s.homepage    = "http://github.com/janlelis/fancy_irb"
   s.summary     = "FancyIrb patches your IRB to create a smooth output experience."
   s.description = "FancyIrb patches your IRB to create a smooth output experience. You can colorize the prompts, irb errors, stderr and stdout, output your result as #=> (hash rockets) and some other improvements."
-  s.required_ruby_version = '>= 1.8.7'
+  s.required_ruby_version = '~> 2.0'
   s.license = 'MIT'
   s.requirements = ['Windows: ansicon <https://github.com/adoxa/ansicon>']
   s.add_dependency 'paint', '>= 0.9.0'
